# trading-backtester

./: .flake8  README.md  conftest.py  pyproject.toml
aux_methods/: cc_data_generation.py  cm_data_generation.py  eq_data_generation.py  fi_data_generation.py  fx_data_generation.py  helper_methods.py
delete/: old_execution.py  old_input.py
delete/logic/: backtester.py  new_backtester.py
logic/: new_backtester.py
models/account/: account.py
models/configs/: config_models.py  execution_config.py  market_data_config.py  optimisation_config.py  portfolio_config.py  risk_management_config.py  stream_config.py
models/configs/tests/: test_market_data_config.py  test_risk_management_config.py
models/input/: input.py  market_data_settings.py  trade_data_settings.py  trade_rule_settings.py
models/market_data/: base_model.py  cc_models.py  cm_models.py  eq_models.py  fi_models.py  fx_models.py  market_model.py
models/output/: output.py
models/rules/: comparison.py  enums.py  execution.py  old_rules.py  rules.py  temp_execution.py
models/rules/tests/: test_open_rules.py  test_trade_rules.py
models/trades/: enums.py  schedule.py  spot_trade.py  trade_models.py  trades.py
modules/: orchestrator.py  risk_management_manager.py  stream_manager.py
modules/managers/: risk_management_manager.py  stream_manager.py  trade_manager.py
modules/optimiser/: optimiser_manager.py
modules/tests/: stream_expected_outputs.py  test_stream_manager.py
static_data/: underlying_data.py
tests/: test_example_strategy.py  test_temp.py
(+5 files in other folders)
