[tool.poetry]
name = "trading-backtester"
version = "0.1.0"
description = ""
authors = ["Joshua Ashmore"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
pandas = "^2.2.2"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
